# utils-results

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs  macros.rs
src/macros/: errbang.rs  results.rs
