[package]
name = "utils-results"
version = "5.2.0"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
homepage = "https://github.com/just-do-halee/utils-results"
repository = "https://github.com/just-do-halee/utils-results"
documentation = "https://docs.rs/utils-results"

description = "The easiest and most intuitive error handling solution."

readme = "README.md"

keywords = ["result", "error", "error-handling", "utility"]
categories = ["rust-patterns", "no-std"]

license = "MIT OR Apache-2.0"
edition = "2018"


[features]
default = [ "std" ]
std = [ "anyhow/default" ]

[dependencies]
anyhow = { version = "1.0", default-features = false }